new proj/src/objects/GE_ES_NPI_Region_Forecast__c.object
<CustomObject>
    <description>This object is created for capturing the Market Potential forecasts records per year as a related item on the NPI Campaign.</description>
    <fields>
        <fullName>GE_ES_Account_Name_TX__c</fullName>
        <inlineHelpText>Enter all potential account names for the sales estimate provided.</inlineHelpText>
        <label>Account Name(s) (TX/Other)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_Name_s_CS__c</fullName>
        <inlineHelpText>Enter all potential account names for the sales estimate provided.</inlineHelpText>
        <label>Account Name(s) (CS)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Approved_Unit_Price_USD__c</fullName>
        <formula>GE_ES_Campaign_Name__r.GE_ES_Approved_Unit_Price_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Unit Price ($USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Available_for_Revenue__c</fullName>
        <formula>Left(
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2008&quot;),&quot;2008;&quot;,&quot;&quot;) &amp; 
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2009&quot;),&quot;2009;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2010&quot;),&quot;2010;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2011&quot;),&quot;2011;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2012&quot;),&quot;2012;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2013&quot;),&quot;2013;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2014&quot;),&quot;2014;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2015&quot;),&quot;2015;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2016&quot;),&quot;2016;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2017&quot;),&quot;2017;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2018&quot;),&quot;2018;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2019&quot;),&quot;2019;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2020&quot;),&quot;2020;&quot;,&quot;&quot;),
LEN(
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2008&quot;),&quot;2008;&quot;,&quot;&quot;) &amp; 
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2009&quot;),&quot;2009;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2010&quot;),&quot;2010;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2011&quot;),&quot;2011;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2012&quot;),&quot;2012;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2013&quot;),&quot;2013;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2014&quot;),&quot;2014;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2015&quot;),&quot;2015;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2016&quot;),&quot;2016;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2017&quot;),&quot;2017;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2018&quot;),&quot;2018;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2019&quot;),&quot;2019;&quot;,&quot;&quot;) &amp;
If(INCLUDES(GE_ES_Campaign_Name__r.GE_ES_Available_for_Revenue__c,&quot;2020&quot;),&quot;2020;&quot;,&quot;&quot;)
)-1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Campaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>NPI Program Title</inlineHelpText>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>NPI_Market_Potentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_NPI_Program_Description__c</fullName>
        <formula>GE_ES_Campaign_Name__r.GE_ES_NPI_Program_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>NPI Id #</inlineHelpText>
        <label>NPI Program #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_NPI_Region_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPI Region Leader</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.GE_ES_NPI__c</field>
                <operation>equals</operation>
                <value>NPI Region Leader</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>NPI_Market_Potentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Units_CS__c</fullName>
        <label>No. of Units(CS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Units_TX__c</fullName>
        <label>No. of Units(TX/Other)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_RGM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RGM</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.GE_ES_NPI__c</field>
                <operation>equals</operation>
                <value>RGM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>NPI_Market_Potentials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Estimate_CS__c</fullName>
        <label>Sales Estimate CS ($ USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Estimate_TX_USD__c</fullName>
        <label>Sales Estimate TX/Other($ USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Region__c</fullName>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Target_Unit_Price_K_USD_Region__c</fullName>
        <inlineHelpText>Recommended sale price of the region</inlineHelpText>
        <label>Target Unit Price ($USD)-Region Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Target_Unit_Price_USD__c</fullName>
        <formula>GE_ES_Campaign_Name__r.GE_ES_Target_Unit_Price_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Unit Price ($USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Year__c</fullName>
        <inlineHelpText>Year must match years in Available for Revenue field of related NPI Campaign.</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NPI Region Forecast</label>
    <nameField>
        <label>NPI Region Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPI Region Forecasts</pluralLabel>
    <recordTypes>
        <fullName>GE_ES_NPI_Rev_Proj</fullName>
        <active>true</active>
        <label>NPI Revenue Projection</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GE_ES_NoOfUnitsCS_SalesEstimateCS</fullName>
        <active>true</active>
        <description>Create a validation rule -  If No. of units(CS) is 0, Sales Estimate $(CS) cannot be &gt;$0. In the same rule, if No. of units(CS) is &gt;0, then Sales Estimate(CS) must be &gt;$0</description>
        <errorConditionFormula>OR( AND( GE_ES_Number_of_Units_CS__c=0, GE_ES_Sales_Estimate_CS__c &gt;0 ), AND( GE_ES_Number_of_Units_CS__c&gt;0, NOT(GE_ES_Sales_Estimate_CS__c &gt;0) ) )</errorConditionFormula>
        <errorMessage>If No. of units(CS) is 0, Sales Estimate $(CS) cannot be &gt;$0
if No. of units(CS) is &gt;0, then Sales Estimate(CS) must be &gt;$0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_ES_NoOfUnitsTX_SalesEstimateTX</fullName>
        <active>true</active>
        <description>Create a validation rule -  If No. of units(TX) is 0, Sales Estimate $((TX) cannot be &gt;$0. In the same rule, if No. of units((TX) is &gt;0, then Sales Estimate(TX) must be &gt;$0.</description>
        <errorConditionFormula>OR(
AND( GE_ES_Number_of_Units_TX__c = 0 , GE_ES_Sales_Estimate_TX_USD__c &gt; 0 ) , 
AND(  GE_ES_Number_of_Units_TX__c &gt;  0 ,NOT(GE_ES_Sales_Estimate_TX_USD__c &gt; 0) )
 )</errorConditionFormula>
        <errorMessage>If No. of units(TX) is 0, Sales Estimate $((TX) cannot be &gt;$0. 
If No. of units((TX) is &gt;0, then Sales Estimate(TX) must be &gt;$0</errorMessage>
    </validationRules>
</CustomObject>